# mac-agents-task

./: .pyre_configuration  README.md  baseline_model.py  enhanced_model.py  evaluate.py  fix_ground_truth.py  generate_plots.py  good_luck.ipynb  pyproject.toml  update_notebook.py
results/: baseline_predictions.json  enhanced_predictions.json  final_evaluation.json  ground_truth.json
